# rob4_project

./: CMakeLists.txt  README.md  package.xml
launch/: all.launch  cam.launch  follow.launch  image.launch  lidar_info.launch  lidar_secure.launch  view_lidar_info.launch
msg/: ClosestObj.msg  EmergStop.msg  LineDist.msg  ObjectPos.msg  RoadChange.msg  RoadObj.msg  SignsFound.msg
node/: movements.h
rviz/: lidar_info.rviz
src/: control.cpp  emerg_stop.cpp  find_car.cpp  find_human.cpp  find_signs.cpp  follow_line.cpp  image.cpp  lidar_info.cpp  lidar_info.launch  move.cpp  move_cir.cpp  test.cpp
